Intermediate_Task3_CloudAudit/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-021d905ff15994317",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-08b9ebf3c4952c372",
            "SecurityGroupArn": "arn:aws:ec2:ap-south-1:641675857378:security-group/sg-021d905ff15994317",
            "OwnerId": "641675857378",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "641675857378",
                            "GroupId": "sg-021d905ff15994317"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
